# ctest_demo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: parallel_ops.h
src/: CMakeLists.txt  parallel_ops.cpp
tests/: CMakeLists.txt  test_parallel_ops.cpp
